# ChartExtractorSupplements

./: .gitignore  README.md  pyproject.toml
experiments/batch_inference/: batch_processing.ipynb
experiments/checkbox_labeling/: one_nn_labeling.ipynb
experiments/clustering/: clustering.ipynb  clustering_erroneous.ipynb  density_clustering.ipynb  spectral_clustering.ipynb
experiments/clustering/utils/: annotations.py  detection_reassembly.py
experiments/locating_number_boxes/: intraop_number_box_centroids.json  locating_number_boxes.ipynb
experiments/mahalanobis_distance/: md_detection_filtering.ipynb
experiments/thin_plate_splines/: TPS.ipynb
experiments/thin_plate_splines/utils/: annotations.py
point_registration/: chart_pointreg.ipynb  cpd_gif.ipynb  point_registration.ipynb  pointreg_proposal.ipynb
point_registration/cpd_gif/: deformable_registration.py  emregistration.py  utility.py
point_registration/utils/: annotations.py  detection_reassembly1.py.py
utilities/: driver_code.py  generate_accuracy_metrics.py  utilities.py
utilities/conversion/: apply_homography_to_labels.ipynb  tile_yolo_dataset.py  yolo_to_label_studio.ipynb  yolo_to_label_studio.py
utilities/detection/: numbers.ipynb  tiled_predict_with_yolo.py
utilities/optimization/: optimize_cpd_parameters.py
